1999-01-06  Tsukamoto Tetsuo  <czkmt@remus.dti.ne.jp>

	* lisp/gnus-offline.el (gnus-offline-setup): Don't call
	`gnus-offline-agent-expire' when 'gnus-agent-expire-all' is
	non-nil.
	(gnus-offline-define-menu-on-miee): Call `easy-menu-add' under
	XEmacs.
	(gnus-offline-popup-menu): New function.
	(gnus-offline-define-menu-and-key): Call it under Emacs to create
	a popup menu in the group buffer.

1998-12-28  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-sum.el (gnus-summary-preview-mime-message): Always
	select the article before previewing. Abolish prefix arg.

	* lisp/gnus-art.el (gnus-mime-preview-quitting-method): re-select
	the article without reservation.
	(gnus-article-display-mime-message): Show all headers if
	`gnus-have-all-headers' the local var of summary buffer is non-nil.

1998-12-24  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus.el: (gnus-version-number): Update to 6.10.1.

1998-12-22  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-art.el (mime-preview-over-to-next-method-alist): Use
	`gnus-summary-next-article' in `gnus-original-article-mode'.
	(mime-preview-over-to-previous-method-alist): Use
	`gnus-summary-prev-article' in `gnus-original-article-mode'.
	(gnus-article-mode-map): Define almost undefined keys to
	`gnus-article-read-summary-keys'.
	(gnus-article-prepare-display): Set `gnus-article-current-summary'
	to `gnus-summary-buffer'.

1998-12-21  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/pop3-fma.el (pop3-fma-movemail): Work with movemail.exe
	with APOP extention.

1998-12-18  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-xmas.el (gnus-xmas-group-startup-message): Show version.
	(gnus-xmas-logo-color-style): Default to `sky'.

	* lisp/gnus.el (gnus-group-startup-message): Show version.
	(gnus-splash-face): Shorten a wavelength.

	* lisp/gnus-bbdb.el (toplevel): Define `bbdb-pop-up-elided-display'
	for avoiding byte-compile warning.

	* lisp/gnus-agent.el (gnus-agent-file-coding-system): Default to
	`raw-text'.
